--- a/portfolio/like-instagram/css/style.css
+++ b/portfolio/like-instagram/css/style.css
@@ -705,6 +705,45 @@ input {
             transform: translate(0px, -80px);
     opacity: 0; } }
 
+.btn {
+  -webkit-border-radius: 50px;
+          border-radius: 50px;
+  display: inline-block;
+  color: #fff;
+  font-weight: 500;
+  border: none;
+  padding: 13px 40px 13px;
+  line-height: 1;
+  position: relative;
+  overflow: hidden;
+  z-index: 1; }
+  @media only screen and (max-width: 1000px) {
+    .btn {
+      font-size: 18px; } }
+  .btn::after {
+    content: '';
+    position: absolute;
+    width: 200%;
+    height: 100%;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    background: -webkit-gradient(linear, left top, right top, from(#5f40cc), color-stop(#da2366), to(#5f40cc));
+    background: -webkit-linear-gradient(left, #5f40cc, #da2366, #5f40cc);
+    background: -o-linear-gradient(left, #5f40cc, #da2366, #5f40cc);
+    background: linear-gradient(90deg, #5f40cc, #da2366, #5f40cc);
+    -webkit-transition: .3s linear;
+    -o-transition: .3s linear;
+    transition: .3s linear; }
+  .btn:hover::after {
+    right: -100%; }
+  .btn-container {
+    display: inline-block;
+    -webkit-box-shadow: 0px 5px 23.4px 6.6px rgba(0, 0, 0, 0.17);
+            box-shadow: 0px 5px 23.4px 6.6px rgba(0, 0, 0, 0.17);
+    -webkit-border-radius: 50px;
+            border-radius: 50px; }
+
 .navbar {
   position: relative;
   margin-top: 20px; }
@@ -817,45 +856,6 @@ input {
 ::selection {
   color: #fcfcfc;
   background: #d12261; }
-
-.btn {
-  -webkit-border-radius: 50px;
-          border-radius: 50px;
-  display: inline-block;
-  color: #fff;
-  font-weight: 500;
-  border: none;
-  padding: 13px 40px 13px;
-  line-height: 1;
-  position: relative;
-  overflow: hidden;
-  z-index: 1; }
-  @media only screen and (max-width: 1000px) {
-    .btn {
-      font-size: 18px; } }
-  .btn::after {
-    content: '';
-    position: absolute;
-    width: 200%;
-    height: 100%;
-    z-index: -1;
-    top: 0;
-    right: 0;
-    background: -webkit-gradient(linear, left top, right top, from(#5f40cc), color-stop(#da2366), to(#5f40cc));
-    background: -webkit-linear-gradient(left, #5f40cc, #da2366, #5f40cc);
-    background: -o-linear-gradient(left, #5f40cc, #da2366, #5f40cc);
-    background: linear-gradient(90deg, #5f40cc, #da2366, #5f40cc);
-    -webkit-transition: .3s linear;
-    -o-transition: .3s linear;
-    transition: .3s linear; }
-  .btn:hover::after {
-    right: -100%; }
-  .btn-container {
-    display: inline-block;
-    -webkit-box-shadow: 0px 5px 23.4px 6.6px rgba(0, 0, 0, 0.17);
-            box-shadow: 0px 5px 23.4px 6.6px rgba(0, 0, 0, 0.17);
-    -webkit-border-radius: 50px;
-            border-radius: 50px; }
 
 .main {
   padding: 203px 0 100px;
@@ -1031,10 +1031,10 @@ input {
     height: 100%; }
     @media only screen and (max-width: 1000px) {
       .main__images {
-        position: relative;
-        margin: 0 auto;
         width: 410px;
         height: 320px;
+        position: relative;
+        margin: 0 auto;
         margin-top: 25px;
         text-align: left; } }
     @media only screen and (max-width: 640px) {
@@ -1208,7 +1208,8 @@ input {
   .main__subblock {
     -webkit-transition: .1s;
     -o-transition: .1s;
-    transition: .1s; }
+    transition: .1s;
+    will-change: transform; }
   .main__subtitle {
     margin-bottom: 10px; }
   .main__pict {
